fixed sizing issue on mobile

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -96,7 +96,6 @@
 }
 
 .home-container {
-    min-width: 600px;
     max-width: 100%;
     margin-top: 50px;
 }
